<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#04c"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="100" >
        
        <TextView
            android:id="@+id/column_date"
            android:layout_width="0px"
            android:layout_weight="20" 
            android:paddingLeft="@dimen/standardPadding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/header_date" />
            
        <TextView
            android:id="@+id/column_upload"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="20"
            android:drawableBottom="@drawable/upload_big"
            android:gravity="center"
            android:text="@string/header_upload" />
        
        <TextView
            android:id="@+id/column_download"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:drawableBottom="@drawable/download_big"
            android:gravity="center"
            android:text="@string/header_download" />
            
        <TextView
            android:id="@+id/column_latency"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:drawableBottom="@drawable/latency_big"
            android:gravity="center"
            android:text="@string/header_latency" />
        
        <TextView
            android:id="@+id/column_jitter"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:drawableBottom="@drawable/jitter_big"
            android:gravity="center"
            android:text="@string/header_jitter"
            android:textSize="10sp" />
        
    </LinearLayout>
    
    <ListView
        android:id="@+id/ListView"
        android:choiceMode="singleChoice" 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:divider="#ffffff"
        android:dividerHeight="0.5dp" >        
    </ListView>
    
</LinearLayout>