<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >
<!-- 
    <ImageView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/headerDescription"
        android:src="@drawable/cpuc" />
 -->  	
  	<LinearLayout
  	    android:id="@+id/topFrame"
  	    android:layout_width="match_parent"
  	    android:layout_height="wrap_content"
  	    android:gravity="center"
  	    android:orientation="vertical"
  	    android:paddingRight="@dimen/standardPadding"
  	    android:paddingTop="@dimen/standardPadding" >
    
	    <ToggleButton
	        android:id="@+id/indoorOutdoorToggle"
	        android:layout_width="130dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:textOff="@string/Indoor"
	        android:textOn="@string/Outdoor" 
	        android:layout_margin="@dimen/standardPadding"
	        android:textColor="#000000"
	        android:background="@drawable/bluebutton"
	        android:drawableLeft="@drawable/indoortoggle"
	        android:drawableRight="@drawable/outdoortoggle"/>
	    
	    <TextView
	        android:id="@+id/topText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingBottom="@dimen/standardPadding"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:visibility="invisible" />

	     <ProgressBar 
            android:layout_height="wrap_content" 
            android:indeterminate="false" 
            style="?android:attr/progressBarStyleHorizontal" 
            android:layout_width="fill_parent" 
            android:progressDrawable="@drawable/blueprogress" 
            android:maxHeight="20dip" 
            android:minHeight="20dip" 
            android:id="@+id/ProgressBar"
            android:visibility="invisible"
            android:gravity="center"
            />
	     
	    </LinearLayout>
    
  	<LinearLayout
  	    android:id="@+id/testResults"
  	    android:layout_width="match_parent"
  	    android:layout_height="0dp"
  	    android:gravity="top"
  	    android:orientation="vertical"
  	    android:paddingTop="@dimen/standardPadding" 
  	    android:paddingBottom="@dimen/standardPadding" 
  	    android:layout_weight="1" 
  	    android:inAnimation="@anim/slidein"
  	    android:outAnimation="@anim/slideout">
	     
	  	 <LinearLayout
	  	    android:id="@+id/uploadResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:id="@+id/uploadIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/upload_big" />	
	            <TextView
	                android:id="@+id/uploadLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/uploadLabel"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/resultsLabelSize"
	                android:layout_weight="1" />
	
	            <TextView
	                android:id="@+id/uploadSpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:paddingRight="@dimen/adjustmentPadding"
	                android:text="@string/defaultValue"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/numResultsSize"
	                android:width="@dimen/numDisplayWidth" />
	
	            <TextView
	                android:id="@+id/uploadUnits"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="bottom"
	                android:paddingBottom="@dimen/adjustmentPadding"
	                android:text="@string/kilobytespersecond"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:width="@dimen/unitsWidth" />
	
	        </LinearLayout>
	  	
	  	  <LinearLayout
	  	    android:id="@+id/downloadResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:id="@+id/downloadIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/download_big" />
	
	            <TextView
	                android:id="@+id/downloadLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/downloadLabel"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/resultsLabelSize"
	                android:layout_weight="1" />
	
	            <TextView
	                android:id="@+id/downloadSpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:paddingRight="@dimen/adjustmentPadding"
	                android:text="@string/defaultValue"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/numResultsSize"
	                android:width="@dimen/numDisplayWidth" />
	
	            <TextView
	                android:id="@+id/downloadUnits"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="bottom"
	                android:paddingBottom="@dimen/adjustmentPadding"
	                android:text="@string/kilobytespersecond"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:width="@dimen/unitsWidth" />
	
	        </LinearLayout>
	  	 
	  	  <LinearLayout
	  	    android:id="@+id/latencyResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:id="@+id/latencyIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/latency_big" />
	
	            <TextView
	                android:id="@+id/latencyLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/latencyLabel"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/resultsLabelSize"
	                android:layout_weight="1" />
	
	            <TextView
	                android:id="@+id/latencySpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:layout_weight="1.50"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:paddingRight="@dimen/adjustmentPadding"
	                android:text="@string/defaultValue"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/numResultsSize"
	                android:width="@dimen/numDisplayWidth" />
	
	            <TextView
	                android:id="@+id/latencyUnits"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="bottom"
	                android:paddingBottom="@dimen/adjustmentPadding"
	                android:text="@string/miliseconds"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:width="@dimen/unitsWidth" />
	
	        </LinearLayout>
	        
	  	  <LinearLayout
	  	    android:id="@+id/jitterResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:id="@+id/jitterIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/jitter_big" />
	
	            <TextView
	                android:id="@+id/jitterLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:paddingRight="@dimen/adjustmentPadding"
	                android:text="@string/jitterLabel"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/resultsLabelSize"
	                android:layout_weight="1" />
	
	            <TextView
	                android:id="@+id/jitterSpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:layout_weight="1.08"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:paddingRight="@dimen/adjustmentPadding"
	                android:text="@string/defaultValue"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/numResultsSize"
	                android:width="@dimen/numDisplayWidth" />
	
	            <TextView
	                android:id="@+id/jitterUnits"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="left"
	                android:paddingBottom="@dimen/adjustmentPadding"
	                android:text="@string/miliseconds"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:width="@dimen/unitsWidth" />
	
	        </LinearLayout>
	  </LinearLayout>      
	 <LinearLayout
         android:id="@+id/bottomFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="vertical"
         android:paddingBottom="@dimen/standardPadding" >
        
	   <ProgressBar
	       android:id="@+id/loadingIcon"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_gravity="center"
	       android:visibility="invisible" />       

	    <Button
	        android:id="@+id/ButtonStandardTest"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_margin="@dimen/standardPadding"
	        android:background="@drawable/bluebutton"
	        android:text="@string/standardTest" />

	 </LinearLayout>
	 
     <TextView 
	   	    android:layout_width="fill_parent" 
	   	    android:layout_height="fill_parent"
	    	android:id="@+id/TextViewMain" 
	    	android:text=""
	    	android:gravity="bottom" 
	    	android:scrollbars="vertical" 
	    	android:visibility="gone" 
	    	android:paddingTop="@dimen/standardPadding"
	    	android:paddingBottom="@dimen/standardPadding"/>

</LinearLayout>